<resources>
    <string name="app_name">My Application</string>


    <string name="activity_settings_name">Settings</string>


    <string name="first_action_add">Add</string>
    <string name="first_action_about">About</string>



    <string name="dialog_about_ok">OK</string>
    <string name="dialog_about_cancel">CANCEL</string>
    <string name="dialog_about_title">AUTHOR:</string>
    <string name="dialog_about_message">Aleksandar Aleksic</string>

    <string name="pref_notification">pref_notification</string>
    <string name="pref_notification_title">Allow Notification</string>
    <string name="pref_notification_summary">Statusbar notification</string>

    <string name="pref_toast">pref_toast</string>
    <string name="pref_toast_title">Allow Toast</string>
    <string name="pref_toast_summary">Toast notification</string>

    <string name="label_name">NAME:</string>
    <string name="label_description">DESCRIPTION:</string>
    <string name="label_pictures">PICTURE</string>

    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="btn_choose">CHOOSE</string>
    <string name="label_address">ADDRESS:</string>
    <string name="label_phone">PHONE:</string>
    <string name="label_square">SQUARE:</string>
    <string name="label_rooms">Nr. ROOMS:</string>
    <string name="label_price">PRICE:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tour">TOUR</string>

    <string name="notification_title">Tour scheduled</string>
    <string name="notification_text">Tour scheduled during the next week.</string>











</resources>
